--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6DUL1HXJs1zCv0+8Tw8B4",
+      "authorship_tag": "ABX9TyPdDrkdW/Mt+mj9KR2a2I2w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,6 +121,7 @@
         "from langchain.agents import initialize_agent, AgentType\n",
         "from langchain.tools import BaseTool, StructuredTool\n",
         "from langchain.schema.agent import AgentFinish\n",
+        "from langchain.schema import BaseMessage, AIMessage, HumanMessage\n",
         "import os\n",
         "import langchain\n",
         "import openai\n",
@@ -132,7 +133,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": 118,
+      "execution_count": 147,
       "outputs": []
     },
     {
@@ -701,9 +702,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wq3KyyEI-bYO",
-        "outputId": "b55d5193-988c-4a3a-d316-c0ecc571336f"
+        "outputId": "637e370e-8942-44fd-f143-b26c4566985e"
       },
-      "execution_count": 123,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "stream",
@@ -720,7 +721,7 @@
       "source": [
         "## Test 2\n",
         "\n",
-        "Not working, memory implementation throws error"
+        "with memory"
       ],
       "metadata": {
         "id": "dAsubqpZN9i8"
@@ -729,24 +730,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from langchain.schema import BaseMessage, AIMessage, HumanMessage\n",
-        "#hhh = BaseMessage({type:\"user\", content:\"test\"})\n",
-        "jj = AIMessage(content=(\"hello\"))\n",
-        "kk = HumanMessage(content=(\"hello\"))"
-      ],
-      "metadata": {
-        "id": "45lfBmP5iAjo"
-      },
-      "execution_count": 142,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# see https://levelup.gitconnected.com/building-a-powerful-agent-has-no-challenge-today-774e27be818d\n",
-        "\n",
-        "# only for single prompt - no memory !\n",
-        "\n",
         "def calculate_insurance_premium(insured_sum: int, industry: str) -> float:\n",
         "    \"\"\"Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\"\"\"\n",
         "    premium = insured_sum*0.25\n",
@@ -774,7 +757,7 @@
         "    \"chat_history\": lambda x: x[\"chat_history\"]\n",
         "} | prompt | llm_with_tools | OpenAIFunctionsAgentOutputParser()\n",
         "\n",
-        "memory = ConversationBufferMemory(memory_key=\"chat_history\", return_messages=True)\n",
+        "memory = \"\"\n",
         "\n",
         "langchain.debug = False\n",
         "\n",
@@ -791,18 +774,12 @@
         "    })\n",
         "    if isinstance(output, AgentFinish):\n",
         "        final_result = output.return_values[\"output\"]\n",
-        "        # hier der Fehler? variable chat_history should be a list of base messages\n",
-        "        #msg = {\"role\": \"user\", \"content\": myprompt}\n",
         "        chat_history.append(HumanMessage(content=(myprompt)))\n",
-        "        #msg = {\"role\": \"assistant\", \"content\": output.return_values[\"output\"]}\n",
         "        chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
         "        break\n",
         "    else:\n",
         "        print(output.tool, output.tool_input)\n",
         "        print(output)\n",
-        "        #tool = {\n",
-        "        #    \"get_word_length\": get_word_length\n",
-        "        #}[output.tool]\n",
         "        tool = tools_dict[output.tool]\n",
         "        observation = tool.run(output.tool_input)\n",
         "        intermediate_steps.append((output, observation))\n",
@@ -811,12 +788,12 @@
       ],
       "metadata": {
         "id": "kBP6IHULEJ2P",
-        "outputId": "bcc2e3a0-e6b4-4ba5-a875-233d72f26592",
+        "outputId": "28e36382-fbb5-4411-92bd-5f232560f43e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 143,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,9 +823,6 @@
         "    else:\n",
         "        print(output.tool, output.tool_input)\n",
         "        print(output)\n",
-        "        #tool = {\n",
-        "        #    \"get_word_length\": get_word_length\n",
-        "        #}[output.tool]\n",
         "        tool = tools_dict[output.tool]\n",
         "        observation = tool.run(output.tool_input)\n",
         "        intermediate_steps.append((output, observation))\n",
@@ -860,9 +834,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AgvkWyCvnOPS",
-        "outputId": "bfe3292c-b9f5-4d64-f238-ab955a0e7d68"
+        "outputId": "b0b4d5fc-c2e1-4228-d778-11108976e41c"
       },
-      "execution_count": 144,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "stream",
