--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdDrkdW/Mt+mj9KR2a2I2w",
+      "authorship_tag": "ABX9TyOZFkIyFjJvYfI3FncU3s1a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "K_sEe-A1S56l"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -69,7 +69,6 @@
       "outputs": [],
       "source": [
         "!pip install langchain langchainhub langchain_experimental google-search-results wikipedia openai gradio -q\n",
-        "# !pip install google-search-results wikipedia -q\n",
         "%load_ext gradio"
       ]
     },
@@ -85,10 +84,22 @@
         "  CREDS = json.loads(os.getenv('CREDS'))"
       ],
       "metadata": {
-        "id": "IWrCvpKaENeu"
+        "id": "IWrCvpKaENeu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d77f4e11-e46e-4b09-c8e2-c9802d630904"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Secrets (JSON string): ··········\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -120,7 +131,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -224,11 +235,14 @@
         "    premium = insured_sum*0.25\n",
         "    return premium\n",
         "\n",
-        "calculation_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False) # True return result without additional text\n",
+        "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
         "\n",
-        "tools = [\n",
-        "    calculation_tool\n",
-        "]\n",
+        "tools = [calc_tool]\n",
+        "tools_dict = {\"calculate_insurance_premium\": calc_tool} # only needed if used in \"Manual loop for agent_executor\"\n",
+        "\n",
+        "llm_with_tools = llm.bind(\n",
+        "    functions=[format_tool_to_openai_function(t) for t in tools]\n",
+        ")\n",
         "\n",
         "prompt = ChatPromptTemplate.from_messages([\n",
         "    (\"system\", \"You are a useful assistant.\"),\n",
@@ -236,10 +250,6 @@
         "    (\"user\", \"{input}\"),\n",
         "    MessagesPlaceholder(variable_name=\"agent_scratchpad\"),\n",
         "])\n",
-        "\n",
-        "llm_with_tools = llm.bind(\n",
-        "    functions=[format_tool_to_openai_function(t) for t in tools]\n",
-        ")\n",
         "\n",
         "agent = {\n",
         "    \"input\": lambda x: x[\"input\"],\n",
@@ -250,7 +260,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -265,8 +275,10 @@
     {
       "cell_type": "code",
       "source": [
+        "# Init agent and memory\n",
         "memory = ConversationBufferMemory(memory_key=\"chat_history\", return_messages=True)\n",
         "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True, memory=memory)\n",
+        "messages = [{\"role\": \"assistant\", \"content\": \"How can I help you?\"}]\n",
         "\n",
         "#\n",
         "# Gradio app\n",
@@ -292,12 +304,6 @@
         "      chatbot = gr.Chatbot(bubble_full_width=False)\n",
         "      msg = gr.Textbox()\n",
         "      clear = gr.ClearButton([msg, chatbot])\n",
-        "\n",
-        "      # Init agent and memory\n",
-        "      memory = ConversationBufferMemory(memory_key=\"chat_history\", return_messages=True)\n",
-        "      agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True, memory=memory)\n",
-        "      messages = [{\"role\": \"assistant\", \"content\": \"How can I help you?\"}]\n",
-        "      #chatbot.append(None, \"How can I help you?\")\n",
         "\n",
         "      def ask(message, chat_history):\n",
         "          chat_history.append((message, None))\n",
